Fix to avoid layout shift

--- a/themes/supersimple/assets/styles/header.scss
+++ b/themes/supersimple/assets/styles/header.scss
@@ -189,6 +189,7 @@ header {
 
             .nav-date {
                 position: unset;
+                height: 2rem;
 
                 ul {
                     justify-content: space-between;
